--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -600,6 +600,7 @@
                 <a href="/">Dashboard</a>
                 <a href="/products">Produkte</a>
                 <a href="/products/new">Neues Produkt</a>
+                <a href="/sales-orders">📋 Verkäufe</a>
                 <a href="/materials">Materialien</a>
                 <a href="/machines">Maschinen</a>
                 <a href="/tools/converted-files">🎨 SVG-Bibliothek</a>
