--- a/app/templates/materials/form.html
+++ b/app/templates/materials/form.html
@@ -13,7 +13,7 @@
                     <label for="name">Materialname *</label>
                     <input type="text" id="name" name="name" required 
                            value="{{ material.name if material else '' }}"
-                           placeholder="z.B. PLA Filament, A4 Papier, Stickerbogen">
+                           placeholder="z.B. PLA Filament, A4 Papier, Sticker-Sheet">
                 </div>
                 
                 <div class="form-group">
