--- a/app/templates/products/form_diecut_sticker.html
+++ b/app/templates/products/form_diecut_sticker.html
@@ -21,7 +21,7 @@
             
             <div>
                 <div class="form-group">
-                    <label for="sheet_material_id">Material (Stickerbogen) *</label>
+                    <label for="sheet_material_id">Material (Sticker-Sheet) *</label>
                     <select id="sheet_material_id" name="sheet_material_id" required>
                         <option value="">-- Bitte wählen --</option>
                         {% for s in sticker_sheets %}
