--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,7 +26,7 @@
     <h2>Neues Produkt anlegen</h2>
     <div class="actions" style="margin-top: 20px;">
         <a href="/products/3d-print/new" class="btn btn-primary">+ 3D-Druck</a>
-        <a href="/products/sticker-sheet/new" class="btn btn-primary">+ Stickerbogen</a>
+        <a href="/products/sticker-sheet/new" class="btn btn-primary">+ Sticker-Sheet</a>
         <a href="/products/diecut-sticker/new" class="btn btn-primary">+ Die-Cut Sticker</a>
         <a href="/products/laser-engraving/new" class="btn btn-primary">+ Laser-Gravur</a>
     </div>
