--- a/app/templates/products/list.html
+++ b/app/templates/products/list.html
@@ -114,7 +114,7 @@
         <h2>Alle Produkte</h2>
         <div>
             <a href="/products/3d-print/new" class="btn btn-primary">+ 3D-Druck</a>
-            <a href="/products/sticker-sheet/new" class="btn btn-primary">+ Stickerbogen</a>
+            <a href="/products/sticker-sheet/new" class="btn btn-primary">+ Sticker-Sheet</a>
         </div>
     </div>
     
