Alle Materialien für alle Produkttypen verfügbar; Bögen->Produkteinheiten

--- a/app/templates/products/form_sticker_sheet.html
+++ b/app/templates/products/form_sticker_sheet.html
@@ -63,7 +63,7 @@
             
             <div>
                 <div class="form-group" id="units_per_sheet_group">
-                    <label for="units_per_sheet">Bögen pro Materialbogen *</label>
+                    <label for="units_per_sheet">Produkteinheiten *</label>
                     <input type="number" id="units_per_sheet" name="units_per_sheet" 
                            step="1" min="1" required
                            value="{{ product.units_per_sheet if product else '3' }}"
